--- a/app/en/privacy.html
+++ b/app/en/privacy.html
@@ -11,11 +11,13 @@
     <a id="logo-container" href="#" class="brand-logo">
       Privacy policy
     </a>
-    <div class="right">
-      <a href="/app/fr/privacy.html">
-        <img src="/assets/img/fr.svg" alt="fr">
-      </a>
-    </div>
+    <ul id="nav-mobile" class="right">
+      <li>
+        <a href="/app/fr/privacy.html">
+          <img src="/assets/img/fr.svg" alt="fr">
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
 <div class="container">
