--- a/app/fr/privacy.html
+++ b/app/fr/privacy.html
@@ -11,11 +11,13 @@
     <a id="logo-container" href="#" class="brand-logo">
       Règles de confidentialité
     </a>
-    <div class="right">
-      <a href="/app/en/privacy.html">
-        <img src="/assets/img/en.svg" alt="en">
-      </a>
-    </div>
+    <ul id="nav-mobile" class="right">
+      <li>
+        <a href="/app/en/privacy.html">
+          <img src="/assets/img/en.svg" alt="en" style="height: 50px;">
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
 <div class="container">
