--- a/app/en/privacy.html
+++ b/app/en/privacy.html
@@ -14,7 +14,7 @@
     <ul id="nav-mobile" class="right">
       <li>
         <a href="/app/fr/privacy.html">
-          <img src="/assets/img/fr.svg" alt="fr">
+          <img src="/assets/img/fr.svg" alt="fr" style="height: 50px;">
         </a>
       </li>
     </ul>
