--- a/app/en/privacy.html
+++ b/app/en/privacy.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Privacy policy</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
 <nav class="blue lighten-1" role="navigation">
@@ -14,7 +15,7 @@
     <ul id="nav-mobile" class="right">
       <li>
         <a href="/app/fr/privacy.html">
-          <img src="/assets/img/fr.svg" alt="fr" style="height: 50px;">
+          <img src="/assets/img/fr.svg" alt="fr" class="lang-flag">
         </a>
       </li>
     </ul>
